# py_dutch_numerals

./: .gitignore  DutchNumbers.g4  DutchNumbersLexer.g4  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
features/: environment.py  tel.feature
features/steps/: tel_steps.py
